# axum-htmx-maud-tailwind

./: Cargo.toml  Dockerfile
migrations/: 00000000_todos.sql
prelude/: lib.rs
src/: app.rs  main.rs  tracing.rs  view.rs
src/app/: mod.rs
src/db/: mod.rs  todo.rs
src/prelude/: lib.rs  mod.rs  pool.rs
src/todo/: db.rs  mod.rs  view.rs
