[package]
name = "axum-htmx-maud-tailwind"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["default"] }
axum-extra = "0.7.7"
lazy_static = "1.4.0"
maud = { version = "0.25.0", features = ["axum"] }
tokio = { version = "1.32.0", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.4.3", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
